frontend/assets/css/sira.css
.mapbody {
    position: absolute;
    top: 32px;
    bottom: 10px;
    width: 100%;
}
#map, .fill {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.info {
    z-index: 2;
    position: absolute;
    right: 15px;
    padding: 10px;
    background-color: white;
    border-radius: 10px;
    opacity: 0.7;
    top: 55px;
}

.links {
    padding: 10px;
    background-color: white;
    border-radius: 10px;
    opacity: 0.7;
    margin-bottom: 10px;
}

.toolbar-item {
    padding: 10px;
    background-color: white;
    border-radius: 10px;
    opacity: 0.7;
    margin-bottom: 10px;
}

.toolbar-item.open {
    background-color: #AAA;
}

/* SIRA Query Panel */

.querypanel-container{
	top:10px;
    width: 850px;
}

.querypanel-container .panel-title{
    font-size: 20px;
}

.querypanel-container .panel-title a{
    cursor: text;
    text-decoration:none;
}

.modal-header{
    background-color: #007e4f;
    color: #ffffff;
}

.dhContainer{
    background-color: #F5F5F5;
    padding: 2px;
    margin-bottom: 10px;
    border-radius: 10px;
    border: 1px solid #337AB7;
}

.dhContainer h4{
    padding-left: 10px;
}

.ftheader{
    color: #337ab7;
}

.collapsible{
    color: #FFFFFF;
}

.template{
    height: 500px;
    max-height: 500px;
    overflow-x: hidden;
    overflow-y: auto;
    border: none;
    margin-top: 30px;
	margin-bottom: 0px;
}

.dialog-error-header{
    width: 500px;
}


.dialog-error-body{
    height: 600px;
    width: 500px;
    overflow: auto;
}

.dialog-error-footer{
    width: 500px;
}

#loading-error-dialog .modal-content{
    width: 510px;
}
/* QUERY PANEL IN SIDEBAR*/
.side-querypanel{
    position: absolute;
    top: 0px;
    bottom: 0px;
    margin: 0px;
    height: auto;
    overflow-y: auto;
    width: 100% !important;
}
.side-querypanel #add-condition-group{
   position: relative;
   left: 60px;
}
.side-querypanel #attributeFilterPanel .logicHeader .col-xs-5 {
    width: 50% !important;
}
.side-querypanel #attributeFilterPanel .logicHeader .col-xs-6 {
    width: 40% !important;
}
.side-querypanel #spatialFilterPanel .detail_geom_button {
    position: relative;
    left: 25px;
}
.sidepanel-featuregrid {
    margin-bottom: 0px !important;
    border-width: 0px;
}
/* SIRA FeatureGrid */

.grid-close{
    color: #FFFFFF;
}

.grid-close:hover{
    color: #FFFFFF;
}

.featuregrid-container{
    position: absolute;
    top: 0px;
    bottom:0px;
    overflow-y: auto;
}

.featuregrid-container .panel-title{
    font-size: 20px;
    text-transform: uppercase;
    font-weight: bold;
}
.featuregrid-container .panel-heading{
    cursor: move;
}
.featuregrid-container .panel-title a{
    cursor: move;
    text-decoration:none;
}
.featuregrid-container .react-resizable-handle{
    bottom:-15px;
    right: -15px;
}
.featuregrid {
    height: 750px;
    max-height: 750px;
    overflow-x: hidden;
    overflow-y: auto;
    border: none;
}
#pageRowSummaryPanel{
    width: auto;
}
/* MAP Controls*/

#mapstore-scalebox {
    z-index: 10;
    bottom: 6px;
    left: -2px;
    position: absolute;
    margin: 8px;
}

#mapstore-zoomtomaxextents {
    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2);
    z-index: 10;
    top: 67px;
    left: 0px;
    position: absolute;
    margin-left: 10px;
}

.sira-scalebar{
    bottom: 65px;
}
/*
.querypanel #attributeFilterPanel .col-xs-3, .querypanel .col-xs-9 {
    width: 50% !important;
}

.querypanel #attributeFilterPanel .logicHeader .col-xs-5 {
    width: 50% !important;
}

.querypanel #spatialFilterPanel .col-xs-5 {
    width: 50% !important;
}

.querypanel #spatialFilterPanel .col-xs-7 {
    width: 50% !important;
}
*/
.querypanel #spatialFilterPanel hr {
    display: none;
}

.group-expanded .Sortable {
    max-height: 200px;
    overflow: auto;
}

.sectionHader a:hover {
    color: #000000;
    text-decoration: none;
}

.labeledfield-no-value{
    font-style: italic;
}

.handle_querypanel {
    cursor: move;
}
div.mappaSiraDecisionale .querypanel-container .querypanel .panel-heading [class^="glyphicon-triangle-"]:before, [class*=" glyphicon-triangle-"]:before {
    font-family: inherit !important;
}
.querypanel-container .glyphicon-collapse-down{
    display: none;
}
.querypanel-container .glyphicon-collapse-down:before {
    color: black;
    content: "\e252";
    font-family: inherit !important;
}
.querypanel-container .panel-title .m-slider{
    background-color: #d1d1d1;
}
.querypanel-container .query-filter-container .no-border.btn-default{
    background: #017f4f;
}
.querypanel-container .btn-default {
    color: #333;
    background-color: #fff;
    border-color: #ccc;
}
.querypanel-container .glyphicon-expand:before {
    color: black;
    content: "\e251";
    font-family: inherit !important;
}

.querypanel-container [class*=" glyphicon-minus"]:before  {
    content: "\e014";
    font-family: inherit !important;
    font-size: 14px;
}
.querypanel-container [class*=" glyphicon-remove"]:before {
    content: "\e014";
    font-family: inherit !important;
    font-size: 14px;
}
.querypanel-container [class*=" glyphicon-plus"]:before {
    content: "\2b";
    font-family: inherit !important;
    font-size: 14px;
}
.querypanel-container .col-xs-12 h4 {
    color: #31708f;
    background-color: #d9edf7;
    padding: 15px;
    margin-bottom: 20px;
    border: 1px solid #bce8f1;
    border-radius: 4px;
    font-size: 14px;
}
#mapstore-getfeatureinfo{
    z-index: 1024 !important;
    width: 500px;
    height: calc(100% - 150px);
}
#mapstore-getfeatureinfo .panel-body {
    padding: 15px;
}

#mapstore-getfeatureinfo > .panel-body {
    overflow-y: auto;
    position: absolute;
    bottom: 0;
    top: 43px;
    width: 100%;
    left: 0;
}
/* Catalog styles */
.catalog-object {
    cursor: pointer;
    border-bottom: 1px solid #dddddd;
}
.toc-group-children .catalog-object {
    background-color: rgba(181, 208, 208, 0.2);
    cursor: pointer;
    border-bottom: 0px;
}
/* ... */

